Fixed gap under the navbar

--- a/index.css
+++ b/index.css
@@ -46,7 +46,7 @@ li {
 li a {
     display: block;
     color: white;
-    padding: 14px 16px;
+    padding: 18px 17px;
     text-decoration: none;
 	font-family: myFirstFont;
 }
